--- a/style.css
+++ b/style.css
@@ -95,12 +95,13 @@ img {
   margin: -200px auto 0;
   text-align: center;
   border-radius: 50%;
-  background-color: #daed0e;
+  background-color: black;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
 }
-.header .arrow:hover, .header .arrow:focus {
+.header .arrow:hover,
+.header .arrow:focus {
   -webkit-animation: point-down 1s alternate infinite;
-          animation: point-down 1s alternate infinite;
+  animation: point-down 1s alternate infinite;
 }
 .header .arrow svg {
   margin-top: 15px;
@@ -126,7 +127,7 @@ img {
 }
 .header .header__cart .header__submenu .shopping-cart-container.open {
   -webkit-animation: fade-down 0.3s forwards;
-          animation: fade-down 0.3s forwards;
+  animation: fade-down 0.3s forwards;
   pointer-events: auto;
 }
 .header .header__cart .header__submenu .cart {
@@ -143,7 +144,8 @@ img {
   font-size: 1rem;
   border-radius: 5px;
 }
-.header .header__cart .header__cart-btn:hover, .header .header__cart .header__cart-btn:focus {
+.header .header__cart .header__cart-btn:hover,
+.header .header__cart .header__cart-btn:focus {
   border: 3px solid #b61a12;
 }
 .header .header__cart .header__submenu {
@@ -182,7 +184,7 @@ img {
   padding: 5px 10px;
   border-radius: 50%;
   background-color: black;
-  color: #daed0e;
+  color: black;
   transition: background-color 0.3s ease-out;
 }
 .header .header__cart .header__submenu .remove:hover,
@@ -200,7 +202,8 @@ img {
   color: #333;
   border: 1px solid black;
 }
-.header .header__cart .header__submenu .cart-btn:hover, .header .header__cart .header__submenu .cart-btn:focus {
+.header .header__cart .header__submenu .cart-btn:hover,
+.header .header__cart .header__submenu .cart-btn:focus {
   background-color: #b61a12;
   color: #fff;
 }
@@ -223,17 +226,18 @@ img {
   line-height: 0.9;
   margin-left: 20px;
 }
-.header .header__main {
-  height: 100vh;
-  display: flex;
 
+.header .header__main {
+  height: 95vh;
+  display: flex;
+  justify-content: center;
   align-items: center;
- 
-  background-image: linear-gradient( rgba(10, 10, 10, 0.7), rgba(15, 15, 15, 0.7)), url(https://static1.makeuseofimages.com/wordpress/wp-content/uploads/2010/09/online-cooking-guides-sites-featured.jpg);
+  background-image: linear-gradient( rgba(8, 8, 8, 0.7), rgba(8, 8, 8, 0.7)), url(https://th.bing.com/th/id/R.10066f72dcb6f72893756b4faf1b8230?rik=TwQ1XMQVC705Gw&pid=ImgRaw&r=0);
   background-size: cover;
 
-
-
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+  
 }
 
 .page-content {
@@ -244,9 +248,10 @@ img {
   line-height: 1;
   transition: all 0.3s;
 }
-.card:hover, .card:active {
+.card:hover,
+.card:active {
   transform: scale(1.1);
-  border: 1px solid #daed0e;
+  border: 1px solid black;
 }
 
 .card__title,
@@ -264,11 +269,11 @@ img {
   font-weight: 400;
   margin-bottom: 0;
   margin-top: 0;
-  color: #333;
-  background-color: #daed0e;
+  color: #f8f6f6;
+  background-color: black;
 }
 
-.card__btn {
+.addButton {
   width: 100%;
   text-align: center;
   padding: 0.5em;
@@ -277,12 +282,14 @@ img {
   border: 1px solid #b61a12;
   color: #fff;
 }
-.card__btn:hover, .card__btn:focus, .card__btn:active {
+.addButton:hover,
+.addButton:focus,
+.addButton:active {
   transform: translatey(2px);
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.5);
-  background-color: #b61a12;
+  background-color: #9e1610;
 }
-.card__btn:active {
+.addButton:active {
   border: 3px solid #9e1610 inset;
 }
 
@@ -290,7 +297,7 @@ img {
   margin-top: 4em;
   padding-bottom: 2em;
   padding-top: 2em;
-  border-top: 1px dashed #b61a12;
+  border-top: 1px dashed #020202;
 }
 
 .footer__container {
@@ -304,10 +311,11 @@ img {
 .footer__link-item {
   color: black;
 }
-.footer__link-item:hover, .footer__link-item:focus,
+.footer__link-item:hover,
+.footer__link-item:focus,
 .footer__link-item:hover,
 .footer__link-item:focus {
-  color: #9e1610;
+  color: #0c0b0b;
 }
 
 @-webkit-keyframes point-down {
@@ -328,14 +336,14 @@ img {
     transform: translatey(20px);
     transform: scale(1.3);
     -webkit-animation-timing-function: cubic-bezier(0, 1, 0.75, 0);
-            animation-timing-function: cubic-bezier(0, 1, 0.75, 0);
+    animation-timing-function: cubic-bezier(0, 1, 0.75, 0);
   }
   100% {
     opacity: 1;
     transform: translatey(0);
     transform: scale(1);
     -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
   }
 }
 @keyframes fade-down {
@@ -345,14 +353,13 @@ img {
     transform: translatey(20px);
     transform: scale(1.3);
     -webkit-animation-timing-function: cubic-bezier(0, 1, 0.75, 0);
-            animation-timing-function: cubic-bezier(0, 1, 0.75, 0);
+    animation-timing-function: cubic-bezier(0, 1, 0.75, 0);
   }
   100% {
     opacity: 1;
     transform: translatey(0);
     transform: scale(1);
     -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
   }
 }
-
